k8s/apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - image: jellyfin/jellyfin:12.1
          name: jellyfin
          securityContext:
            privileged: true #per accesso a /dev/dri
          ports:
            - containerPort: 8096
              protocol: TCP
          volumeMounts:
            - mountPath: /dev/dri
              name: intel-gpu
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /cache
              name: jellyfin-cache
            - mountPath: /media
              name: jellyfin-media
              readOnly: true
      volumes:
        - name: intel-gpu
          hostPath:
            path: /dev/dri
            type: Directory
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: jellyfin-cache
          persistentVolumeClaim:
            claimName: jellyfin-cache-pvc
        - name: jellyfin-media
          persistentVolumeClaim:
            claimName: jellyfin-media-pvc
